# vendor-invoice-agent

./: .env.example  .gitignore  README.md  RUNBOOK.md  docker-compose.yml  pyproject.toml
app/: agent.py  config.py  extract.py  inbox.py  models.py  odoo.py  pipeline.py  rules.py  run.py
config/: models.yaml
dashboard/: review_app.py
docs/: DECISIONS.md
eval/: run_eval.py
scripts/: odoo_check.py  odoo_reset.py  odoo_setup.py
tests/: test_logic.py  test_pipeline.py
